[gd_scene load_steps=2 format=3 uid="uid://b0i6gs1hhr8jy"]

[ext_resource type="Script" path="res://Scripts/Menus/MenuNameplate.gd" id="1_falvt"]

[node name="MenuNameplate" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_falvt")

[node name="Name" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
text = "[center]Placeholder[/center]"

[node name="KickButton" type="TextureButton" parent="."]
visible = false
layout_mode = 2

[connection signal="pressed" from="KickButton" to="." method="kickPressed"]
